# showcase

./: OEMC_CDSE_landsat.ipynb  OEMC_CDSE_landsat.md  OEMC_FAIRCheck_v1.ipynb  OEMC_GPP_tutorial.ipynb  OEMC_Geo_Automl_inference_time.ipynb  OEMC_Geo_Automl_inference_time.md  OEMC_Geo_Automl_scikit_map.ipynb  OEMC_Geo_Automl_scikit_map.md  OEMC_in-situ.ipynb  OEMC_in-situ.md  README.md
automl-utils/: automl_utils.py  pyproject.toml
